# yolo-demo

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  PROJECT_STRUCTURE.md  README.md  cov.xml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  docker-publish.yml
configs/: default.yaml  rk3588.yaml
docker/: Dockerfile.rknn-converter  README.md  build_and_convert.sh  validate.sh
docs/: RK3588_DEPLOYMENT.md  RKNN_QUICKSTART.md
scripts/: coco2yolo.py  convert_to_rknn.py  export.py  generate_calib_dataset.py  inference_rknn.py  train.py  validate_rknn.py
src/yolo_demo/: __init__.py  main.py
src/yolo_demo/api/: app.py  schemas.py
src/yolo_demo/api/routes/: export.py  inference.py  training.py
src/yolo_demo/export/: __init__.py  onnx_exporter.py  rknn_converter.py  rknn_exporter.py
src/yolo_demo/inference/: __init__.py  cpu_backend.py  cuda_backend.py  engine.py  mps_backend.py  rknn_backend.py
src/yolo_demo/training/: __init__.py  trainer.py
src/yolo_demo/ui/: __init__.py  coco2yolo.py  dataset_converter.py  rknn_validator.py  webui.py
src/yolo_demo/ui/services/: __init__.py  dataset_service.py  export_service.py  inference_service.py  training_service.py
src/yolo_demo/utils/: __init__.py  logging.py
tests/: test_api.py  test_export.py  test_inference.py  test_logging.py  test_mps_inference.py  test_smoke.py  test_training.py  test_ui_services.py
