[project]
name = "yolo-demo"
version = "0.1.0"
description = "Lightweight real-time object detection system for edge computing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ultralytics>=8.0",
    "torch>=2.0",
    "onnx>=1.15",
    "onnxruntime>=1.16",
    "gradio>=4.0",
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "pydantic>=2.0",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "httpx>=0.24",
    "ruff>=0.1",
]

[project.scripts]
yolo-demo = "yolo_demo.main:cli"
yolo-demo-webui = "yolo_demo.ui.webui:launch"
yolo-demo-api = "yolo_demo.api.app:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yolo_demo"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/yolo_demo --cov-report=term-missing --cov-report=html:cov_html --cov-report=xml:cov.xml"
cov_fail_under = 50

[tool.coverage.run]
source = ["src/yolo_demo"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
